003-初始化本地代码生成器项目

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,9 @@ target
 starsccg.iml
 starsccg.ipr
 starsccg.iws
+starsccg-basic.iml
+starsccg-basic.ipr
+starsccg-basic.iws
 
 
 # Created by .ignore support plugin (hsz.mobi)
