024-优化代码生成器项目的生成路径和代码生成器生成代码的路径

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,9 @@
 ### Custom template
 .idea
 target
-starsccg.iml
-starsccg.ipr
-starsccg.iws
-starsccg-basic.iml
-starsccg-basic.ipr
-starsccg-basic.iws
+*.iml
+*.ipr
+*.iws
 
 
 # Created by .ignore support plugin (hsz.mobi)
