--- a/starsccg-web-backend/pom.xml
+++ b/starsccg-web-backend/pom.xml
@@ -22,8 +22,15 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-freemarker</artifactId>
+            <groupId>com.stars</groupId>
+            <artifactId>starsccg-maker</artifactId>
+            <version>1.0.0</version>
+        </dependency>
+        <!-- https://freemarker.apache.org/index.html -->
+        <dependency>
+            <groupId>org.freemarker</groupId>
+            <artifactId>freemarker</artifactId>
+            <version>2.3.32</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
